Fixed Contact Form Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1906,3 +1906,8 @@ dd
 #cardsmade {
 	padding-top: 20px;
 }
+
+#ctfm {
+	margin: 0px;
+	padding: 0px; 
+}
